# birdtrack

./: README.md  pyproject.toml  ruff.toml
src/: manage.py
src/birdtrack/: asgi.py  settings.py  urls.py  wsgi.py
src/birdtrack/banding/: admin.py  apps.py  models.py
src/birdtrack/banding/fixtures/: README.md  fixture_species.yaml  gen_fixture_species.py
src/birdtrack/banding/migrations/: 0001_initial.py
